# Atlas

./: .gitignore  CMakeLists.txt  README.md
docs/: DECISIONS.md
modules/app/: CMakeLists.txt
modules/app/src/: main.cpp
modules/core/: CMakeLists.txt
modules/core/include/atlas/core/: content_types.hpp  enums.hpp  knowledge_object.hpp  relationship.hpp  result.hpp  strong_id.hpp  uuid.hpp
modules/core/src/: enums.cpp  knowledge_object.cpp  relationship.cpp  uuid.cpp
modules/core/tests/: CMakeLists.txt  test_enums.cpp  test_knowledge_object.cpp  test_relationship.cpp  test_result.cpp  test_strong_id.cpp  test_uuid.cpp
modules/graph/: CMakeLists.txt
modules/graph/include/atlas/graph/: graph_engine.hpp  graph_error.hpp
modules/graph/src/: graph_engine.cpp
modules/graph/tests/: CMakeLists.txt  test_graph_engine.cpp  test_graph_engine_scale.cpp
modules/persistence/: CMakeLists.txt
modules/persistence/include/atlas/persistence/: database.hpp  knowledge_object_repository.hpp  persistence_error.hpp  relationship_repository.hpp
modules/persistence/src/: database.cpp  knowledge_object_repository.cpp  migrations.cpp  migrations.hpp  relationship_repository.cpp
modules/persistence/src/detail/: statement.cpp  statement.hpp
modules/persistence/tests/: CMakeLists.txt  test_database.cpp  test_knowledge_object_repository.cpp  test_relationship_repository.cpp
modules/render/: CMakeLists.txt
modules/render/include/atlas/render/: force_directed_layout.hpp  graph_canvas_item.hpp
modules/render/qml/: GraphView.qml
modules/render/src/: force_directed_layout.cpp  graph_canvas_item.cpp
modules/render/tests/: CMakeLists.txt  test_force_directed_layout.cpp  test_force_directed_layout_scale.cpp
modules/ui/: CMakeLists.txt
modules/ui/include/atlas/ui/: controller_error.hpp  graph_window.hpp  knowledge_object_edit_dialog.hpp  knowledge_object_list_model.hpp  main_window.hpp  relationship_edit_dialog.hpp  relationship_list_model.hpp  relationships_window.hpp  workspace_controller.hpp
modules/ui/src/: graph_window.cpp  knowledge_object_edit_dialog.cpp  knowledge_object_list_model.cpp  main_window.cpp  relationship_edit_dialog.cpp  relationship_list_model.cpp  relationships_window.cpp  workspace_controller.cpp
modules/ui/tests/: CMakeLists.txt  test_graph_window.cpp  test_knowledge_object_list_model.cpp  test_main.cpp  test_main_window.cpp  test_relationship_edit_dialog.cpp  test_relationship_list_model.cpp  test_workspace_controller.cpp
